2003-11-26  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]: added SoupSoapParameter
	structure, to "hide" the usage of xmlNode's.
	(soup_soap_parameter_get_name): functions to manage SOAP
	response parameters.
	(soup_soap_response_get_first_parameter,
	soup_soap_response_get_first_parameter_by_name,
	soup_soap_response_get_next_parameter,
	soup_soap_response_get_next_parameter_by_name):
	new functions for an easy access to the response's parameters.
	(soup_soap_response_from_string): removed warnings.

2003-11-25  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.c (soup_soap_response_set_method_name):
	fixed typo.

2003-11-25  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch] (soup_soap_response_get_method_name,
	soup_soap_response_set_method_name, soup_soap_message_get_parameters):
	new functions.
	(finalize): NULL out new private fields.
	(soup_soap_response_from_string): added validation code.

2003-11-23  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]: new class for managing SOAP
	responses.

	* libsoup/soup-soap-message.[ch] (soup_soap_message_parse_response):
	new function.

	* libsoup/Makefile.am: added new files.

2003-11-18  Rodney Dawes  <dobey@ximian.com>

	* gtk-doc.make: Add gtk-doc.make to cvs for systems without gtk-doc

2003-11-18  Rodney Dawes  <dobey@ximian.com>

	* acinclude.m4: Add GTK_DOC_CHECK

2003-11-18  Dan Winship  <danw@ximian.com>

	* configure.in: Replace old gtk-doc test with GTK_DOC_CHECK()
	(AC_OUTPUT): add docs/Makefile, docs/reference/Makefile

	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): 1.6, for gtk-doc.make

	* Makefile.am: updates for gtk-doc
	(SUBDIRS): add back "docs"

	* docs/Makefile.am (EXTRA_DIST): remove, since those old docs
	aren't around any more

	* docs/reference/*: set up gtk-doc

	* libsoup/Makefile.am (INCLUDES): Change G_LOG_DOMAIN to
	"libsoup". Remove unused defines.

	* libsoup/soup-connection.c: Fix doc comments